WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298891
AX: <label>s that are targets of aria-labelledby lose their labelfor relationship when they change
https://bugs.webkit.org/show_bug.cgi?id=298891
Summary
AX: <label>s that are targets of aria-labelledby lose their labelfor relation...
Joshua Hoffman
Reported
2025-09-15 12:58:36 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Joshua Hoffman
Comment 1
2025-09-15 12:58:42 PDT
<
rdar://problem/158906980
>
Joshua Hoffman
Comment 2
2025-09-15 13:27:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50766
EWS
Comment 3
2025-09-16 07:08:35 PDT
Committed
300029@main
(f96d5091cd43): <
https://commits.webkit.org/300029@main
> Reviewed commits have been landed. Closing PR #50766 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug